# orchestra

./: .dockerignore  .eslintrc.js  .travis.yml  Makefile  README.md
.github/workflows/: ci.yaml  prod.yaml
ci/: after-script.sh  script.sh
cli/: .gitignore  generate-waypoints.js  package.json
common/: Makefile
common/containers/: Dockerfile.protoc
common/messages/: imagery.proto  interop.proto  stats.proto  telemetry.proto
common/scripts/: protobuf-version.sh  wait-for-it.sh
config/: .gitignore  README.md
config/ground/: 37-3dr.rules  38-rfd900.rules  docker-compose.yml
config/plane/: 51-pixhawk.rules  docker-compose.yml  interfaces
forward-interop/: Dockerfile  Makefile  README.md  package.json
forward-interop/src/: forward.js  upload-monitor.js
imagery/: Dockerfile  package.json
imagery/src/: app.js  image-store.js  main.js  service.js  util.js
interop-proxy/: .gitignore  Dockerfile  Dockerfile.test  README.md  mix.exs  test.sh
interop-proxy/config/: config.exs  dev.exs  prod.exs  test.exs
interop-proxy/lib/: interop_proxy.ex  interop_proxy_web.ex
interop-proxy/priv/: flasked_env.exs
interop-proxy/rel/: config.exs
interop-proxy/test/: interop_proxy_test.exs  test_helper.exs
mavproxy/: Dockerfile
pong/: Dockerfile  Makefile  README.md  package.json
pong/src/: pong.js
pong/test/: server-test.js
services/: .dockerignore
services/L O G S/: Dockerfile  jest.config.js  package-lock.json  package.json
services/dashboard/: .gitignore  Dockerfile  Makefile  README.md  package.json
services/forward-interop/: .babelrc  .eslintrc.yml  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  jest.config.js  package.json
services/grafana/: Dockerfile  Makefile
services/image-rec-auto/: .gitignore  Dockerfile  Dockerfile.test  Dockerfile.test_tensorrt  Makefile  README.md  requirements-test.txt  requirements.txt  setup.cfg  worker.py
services/image-rec-manual-api/: Dockerfile  Dockerfile.test  Makefile  requirements.txt
services/image-rec-manual-ui/: .babelrc  .eslintrc.yml  .gitignore  Dockerfile  Dockerfile.test  Makefile  nginx.conf  package.json
services/pathfinder/: .gitignore  Cargo.toml  build.rs  test.json
services/pathfinder/examples/: end_to_end.rs
services/pathfinder/src/: lib.rs  main.rs  nsfw.js  pathfinder.js  router.js  service.js
services/pathfinding/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
services/pathfinding/src/: interop.rs  main.rs  telemetry.rs
services/pathfinding/src/autopilot/: header_preset.rs  mod.rs
telemetry/: .gitignore  Dockerfile  Makefile  README.md  package.json  requirements.txt  run.sh  telemetry.py  util.py  wsgi.py
test/: .gitignore  docker-compose.yml
(+291 files in other folders)
