[package]
name = "pathfinder-service"
version = "0.1.0"
authors = ["UAV Austin <uavaustin@gmail.com>"]
license = "MIT"
edition = "2018"
# default-run = "service" # nightly

[badges]
# TODO

[dependencies]
tower-web = "0.3.6"
tower-service = "0.1.0"
prost = "0.5.0"
tower-web-protobuf = { git = "https://github.com/rrbutani/tower-web-protobuf" }
# pathfinder = { git = "https://github.com/uavaustin/pathfinder", tag = "v1.0.0" }
pathfinder = { path = "../../../pathfinder", features = ["restrict-algorithm-types"] }
serde = "1.0.89"
bytes = "0.4.12"

[build-dependencies]
prost-build = "0.5.0"

# [dev-dependencies.cargo-husky]
# version = "1"
# default-features = false # Disable features which are enabled by default
# features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt", "run-for-all"]

[dev-dependencies]
serde = "1.0.89"
http = "0.1.14"
reqwest = "0.9.14"
bytes = "0.4.12"

[lib]
name = "pathfinder_service"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[[bin]]
name = "service"
path = "src/main.rs"

