[package]
name = "pathfinding"
version = "0.1.0"
authors = ["Steven Zhu <stevenzhu@utexas.edu>"]

[dependencies]
hyper = "0.11"
futures = "0.1"
tokio-core = "0.1"
protobuf = "1.4.3"
serde_json = "1.0"

[dependencies.Obstacle-Path-Finder]
git = "https://github.com/uavaustin/Obstacle-Path-Finder/"
# branch = "switch-to-rust"
rev= "670aa8b"
